# pdf2img-cli

./: .gitignore  PYPROJECT.TOML  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/: __main__.py
src/pdf2img_cli/: __init__.py  pdf2img.py
src/pdf2img_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/simpar_cli.egg-info/: PKG-INFO
