[metadata]
name = pdf2img_cli
version = 0.0.2
author = Darix SAMANI
author_email = samandarix@gmail.com
description = tranform pdf to images
long_description = file: README.md
long_description_content_type = text/markdown
url = github/darixsamani/pdf2img_cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
packages = pdf2img_cli
python_requires = >=3.7
include_package_data = True



[options.entry_points]
console_scripts =
    simpar_cli = pdf2img_cli:main



